syntax = "proto3";

package sint32;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message SInt3208 {
  sint32 field08 = 8 [ (json.field) = { format: { uint64: { } } } ];
}
